Resolve "Katalog: Fahrschülerarten Backend"
Co-authored-by: Tim Hermbecker <tim.hermbecker@init.de>