@@ -8,9 +8,17 @@ import de.svws_nrw.db.dto.current.schild.katalog.DTOFahrschuelerart;
 import de.svws_nrw.db.schema.Schema;
 import de.svws_nrw.db.utils.ApiOperationException;
 import jakarta.ws.rs.core.Response.Status;
+import org.apache.commons.lang3.StringUtils;
+import org.apache.commons.lang3.Strings;
+
+import java.util.Collections;
+import java.util.Comparator;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.Set;
+import java.util.stream.Collectors;
 
 /**
  * Diese Klasse erweitert den abstrakten {@link DataManagerRevised} für das Core-DTO {@link Fahrschuelerart}.
@@ -40,20 +48,27 @@ public final class DataFahrschuelerarten extends DataManagerRevised<Long, DTOFah
 
 	@Override
 	public Fahrschuelerart getById(final Long id) throws ApiOperationException {
-		if (id == null)
+		if (id == null) {
 			throw new ApiOperationException(Status.BAD_REQUEST, "Die ID für die Fahrschülerart darf nicht null sein.");
-
+		}
 		final DTOFahrschuelerart dto = conn.queryByKey(DTOFahrschuelerart.class, id);
-		if (dto == null)
+		if (dto == null) {
 			throw new ApiOperationException(Status.NOT_FOUND, "Es wurde keine Fahrschülerart mit der ID %d gefunden.".formatted(id));
-
+		}
 		return map(dto);
 	}
 
 	@Override
 	public List<Fahrschuelerart> getAll() {
 		final List<DTOFahrschuelerart> fahrschuelerarten = this.conn.queryAll(DTOFahrschuelerart.class);
-		return fahrschuelerarten.stream().map(this::map).toList();
+		final Set<Long> idsOfReferencedFahrschuelerarten = this.getIdsOfReferencedFahrschuelerarten(mapToIds(fahrschuelerarten));
+
+		return fahrschuelerarten
+				.stream()
+				.map(this::map)
+				.map(f -> setReferenceFlag(f, idsOfReferencedFahrschuelerarten))
+				.sorted(Comparator.comparing(f -> f.id))
+				.toList();
 	}
 
 	@Override
@@ -61,9 +76,9 @@ public final class DataFahrschuelerarten extends DataManagerRevised<Long, DTOFah
 		final Fahrschuelerart fahrschuelerart = new Fahrschuelerart();
 		fahrschuelerart.id = dto.ID;
 		fahrschuelerart.bezeichnung = dto.Bezeichnung;
-		fahrschuelerart.istSichtbar = (dto.Sichtbar == null) || dto.Sichtbar;
-		fahrschuelerart.istAenderbar = (dto.Aenderbar == null) || dto.Aenderbar;
-		fahrschuelerart.sortierung = (dto.Sortierung == null) ? -1 : dto.Sortierung;
+		fahrschuelerart.istSichtbar = Boolean.TRUE.equals(dto.Sichtbar);
+		fahrschuelerart.istAenderbar = Boolean.TRUE.equals(dto.Aenderbar);
+		fahrschuelerart.sortierung = Objects.requireNonNullElse(dto.Sortierung, 32000);
 		return fahrschuelerart;
 	}
 
@@ -71,12 +86,7 @@ public final class DataFahrschuelerarten extends DataManagerRevised<Long, DTOFah
 	protected void mapAttribute(final DTOFahrschuelerart dto, final String name, final Object value, final Map<String, Object> map)
 			throws ApiOperationException {
 		switch (name) {
-			case "id" -> {
-				final Long id = JSONMapper.convertToLong(value, false, name);
-				if (!Objects.equals(dto.ID, id))
-					throw new ApiOperationException(Status.BAD_REQUEST,
-							"Die ID %d des Patches ist null oder stimmt nicht mit der ID %d in der Datenbank überein.".formatted(id, dto.ID));
-			}
+			case "id" -> validateId(dto, name, value);
 			case "bezeichnung" -> updateBezeichnung(dto, value, name);
 			case "istSichtbar" -> dto.Sichtbar = JSONMapper.convertToBoolean(value, false, name);
 			case "istAenderbar" -> dto.Aenderbar = JSONMapper.convertToBoolean(value, false, name);
@@ -85,17 +95,52 @@ public final class DataFahrschuelerarten extends DataManagerRevised<Long, DTOFah
 		}
 	}
 
+	private static void validateId(final DTOFahrschuelerart dto, final String name, final Object value) throws ApiOperationException {
+		final Long id = JSONMapper.convertToLong(value, false, name);
+		if (!Objects.equals(dto.ID, id)) {
+			throw new ApiOperationException(Status.BAD_REQUEST,
+					"Die ID %d des Patches ist null oder stimmt nicht mit der ID %d in der Datenbank überein.".formatted(id, dto.ID));
+		}
+	}
+
 	private void updateBezeichnung(final DTOFahrschuelerart dto, final Object value, final String name) throws ApiOperationException {
 		final String bezeichnung = JSONMapper.convertToString(value, false, false, Schema.tab_K_FahrschuelerArt.col_Bezeichnung.datenlaenge(), name);
-		if (Objects.equals(dto.Bezeichnung, bezeichnung) || bezeichnung.isBlank())
+		if (StringUtils.isBlank(bezeichnung) || Strings.CS.equals(dto.Bezeichnung, bezeichnung)) {
 			return;
-
-		final boolean bezeichnungAlreadyUsed = this.conn.queryAll(DTOFahrschuelerart.class).stream()
-				.anyMatch(f -> (f.ID != dto.ID) && bezeichnung.equalsIgnoreCase(f.Bezeichnung));
-		if (bezeichnungAlreadyUsed)
+		}
+		final boolean bezeichnungAlreadyUsed = this.conn
+				.queryAll(DTOFahrschuelerart.class)
+				.stream()
+				.anyMatch(f -> (f.ID != dto.ID) && Strings.CI.equals(bezeichnung, f.Bezeichnung));
+		if (bezeichnungAlreadyUsed) {
 			throw new ApiOperationException(Status.BAD_REQUEST, "Die Bezeichnung %s ist bereits vorhanden.".formatted(bezeichnung));
-
+		}
 		dto.Bezeichnung = bezeichnung;
+	}
+
+	private static Set<Long> mapToIds(final List<DTOFahrschuelerart> fahrschuelerarten) {
+		return fahrschuelerarten
+				.stream()
+				.map(f -> f.ID)
+				.collect(Collectors.toSet());
+	}
+
+	private Set<Long> getIdsOfReferencedFahrschuelerarten(final Set<Long> ids) {
+		if ((ids == null) || ids.isEmpty()) {
+			return Collections.emptySet();
+		}
+
+		final String query = "SELECT DISTINCT a.Fahrschueler_ID FROM DTOSchueler a WHERE a.Fahrschueler_ID IN :ids";
+		final List<Long> results = this.conn
+				.query(query, Long.class)
+				.setParameter("ids", ids)
+				.getResultList();
+		return new HashSet<>(results);
+	}
+
+	private static Fahrschuelerart setReferenceFlag(final Fahrschuelerart fahrschuelerart, final Set<Long> idsOfReferencedFahrschuelerarten) {
+		fahrschuelerart.referenziertInAnderenTabellen = idsOfReferencedFahrschuelerarten.contains(fahrschuelerart.id);
+		return fahrschuelerart;
 	}
 
 }
